# ROS-Workshop

./: README.md
Workshop 1/: Test_pub.cpp
Workshop 1/Solutions/ex_1_2/package_prova/: CMakeLists.txt  package.xml
Workshop 1/Solutions/ex_1_2/package_prova/src/: Test_sub.cpp
Workshop 1/Solutions/ex_1_3/package_prova/: CMakeLists.txt  package.xml
Workshop 1/Solutions/ex_1_3/package_prova/launch/: test_launch.launch.py
Workshop 1/Solutions/ex_1_3/package_prova/src/: Test_pub.cpp  Test_sub.cpp
Workshop 2/gps_conversion/: CMakeLists.txt  package.xml
Workshop 2/gps_conversion/src/: gps_to_odom.cpp  odom_to_tf.cpp
